--- a/package.json
+++ b/package.json
@@ -18,43 +18,43 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "pinia": "^2.1.7",
-    "axios": "^1.6.7",
-    "vee-validate": "^4.12.5",
-    "yup": "^1.4.0",
-    "vue-toastification": "^2.0.0-rc.5",
     "@headlessui/vue": "^1.7.17",
     "@heroicons/vue": "^2.1.1",
+    "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
     "echarts": "^5.5.0",
+    "pinia": "^2.1.7",
+    "vee-validate": "^4.12.5",
+    "vue": "^3.4.21",
     "vue-echarts": "^6.6.9",
-    "date-fns": "^3.3.1"
+    "vue-router": "^4.3.0",
+    "vue-toastification": "^2.0.0-rc.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.7.2",
+    "@types/node": "^20.11.24",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-vue": "^5.0.4",
-    "typescript": "~5.4.0",
-    "vue-tsc": "^2.0.6",
-    "vite": "^5.1.5",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17",
-    "vitest": "^1.3.1",
-    "@vue/test-utils": "^2.4.4",
-    "@vitest/ui": "^1.3.1",
     "@vitest/coverage-v8": "^1.3.1",
+    "@vitest/ui": "^1.3.1",
+    "@vue/test-utils": "^2.4.4",
+    "autoprefixer": "^10.4.17",
     "cypress": "^13.6.6",
     "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.22.0",
-    "@typescript-eslint/parser": "^7.1.1",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@rushstack/eslint-patch": "^1.7.2",
-    "prettier": "^3.2.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.22.0",
     "husky": "^9.0.11",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
-    "@types/node": "^20.11.24",
-    "jsdom": "^24.0.0"
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1",
+    "typescript": "~5.4.0",
+    "vite": "^5.1.5",
+    "vitest": "^1.3.1",
+    "vue-tsc": "^2.0.6"
   }
 }
